--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,15 @@
 
 body {
   text-align: center;
-  background-color: #000000;
+  background-color: ##000;
 }
 
 h1 {
-  color: #fff
+  color: #fff;
 }
 
 h3 {
-  color: #fff
+  color: #fff;
 }
 
 img {
