--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
   text-align: center;
-  background-color: ##000;
+  background-color: #000;
 }
 
 h1 {
@@ -20,5 +20,13 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 10%;
+  width: 70%;
+}
+
+.button2 {
+  background-color: #c8ae89; 
+  color: #000; 
+  position: relative;
+  top: -16px;
+  left: -502px;
 }
