--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,19 @@ body {
 
 h1 {
   color: #001a57;
+  font-weight: bold;
 }
 
 h3 {
   color: #003dcc;
+  font-weight: bold;
 }
 
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 65%;
+  width: 50%;
 }
 
 .mdl-button {
